chore: bump version to 2.0.1, update icon, and set download link to latest release

--- a/App/package.json
+++ b/App/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mino",
   "productName": "Mino",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Personal Finance Manager - AI-powered expense tracker (IPC Mode)",
   "author": "nneans33@gmail.com",
   "main": "electron/main.js",
@@ -66,7 +66,7 @@
         "dmg",
         "zip"
       ],
-      "icon": "electron/icon.icns"
+      "icon": "electron/icon.png"
     }
   }
 }
