--- a/App/vercel.json
+++ b/App/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "VITE_DEMO_MODE=true npm run build",
+    "buildCommand": "npm run build:demo",
     "outputDirectory": "dist",
     "framework": "vite",
     "rewrites": [
